add json_object_iterator.h to headers

--- a/Makefile.am
+++ b/Makefile.am
@@ -26,6 +26,7 @@ libjson_cinclude_HEADERS = \
 	json_object.h \
 	json_object_iterator.h \
 	json_object_private.h \
+	json_object_iterator.h \
 	json_tokener.h \
 	json_util.h \
 	linkhash.h \
