--- a/project.config
+++ b/project.config
@@ -2,3 +2,6 @@
 	inheritFrom = domain-base
 [project]
 	state = active
+	description = "Domain: Base;"\n\
+"Licenses: MIT-style,MIT,GPL-exception,FSF;"\n\
+
