--- a/project.config
+++ b/project.config
@@ -3,5 +3,5 @@
 [project]
 	state = active
 	description = "Domain: Base;"\n\
-"Licenses: MIT-style,MIT,GPL-exception,FSF;"\n\
+"Licenses: MIT-style,MIT;"\n\
 
