--- a/project.config
+++ b/project.config
@@ -1,7 +1,6 @@
 [access]
-	inheritFrom = scm/acls/domain_base
+	inheritFrom = scm/acls/domain_system/libraries
 [project]
-	state = active
 	description = "Domain: Base;"\n\
 "Licenses: MIT-style,MIT;"\n\
 
